--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,7 +13,8 @@ require:
   - rubocop-rspec
 
 AllCops:
-  TargetRubyVersion: 2.7.0
+  SuggestExtensions: false
+  TargetRubyVersion: 3.0.1
   NewCops: enable
   Exclude:
     - '.git/**/*'
@@ -127,9 +128,6 @@ Layout/LineLength:
 # Avoid methods longer than 15 lines of code.
 Metrics/MethodLength:
   Max: 20
-  IgnoredMethods:
-    - swagger_path
-    - operation
 
 
 # A complexity metric geared towards measuring complexity for a human reader.
