--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,40 +1,51 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake.
-# For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
-
 name: Ruby
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   contents: read
 
 jobs:
   test:
-
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # Use `rbenv install -l` and only use the latest stable
-        # version of ruby.
-        ruby-version: ["3.0.1", "3.0.6", "3.1.4", "3.2.2"]
+        os: [ubuntu-latest, ubuntu-20.04, macos-latest, macos-13, macos-12]
+        ruby: ["3.0.1", "3.1", "3.2", "3.3"]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Ruby
-    # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
-    # change this to (see https://github.com/ruby/setup-ruby#versioning):
-    # uses: ruby/setup-ruby@v1
-      uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
-      with:
-        ruby-version: ${{ matrix.ruby-version }}
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - name: Run tests
-      run: bundle exec rake
+      - uses: actions/checkout@v3
+
+      - name: Set timezone on Linux
+        if: contains(matrix.os, 'ubuntu')
+        run: sudo timedatectl set-timezone 'America/New_York'
+
+      - name: Set timezone on macOS
+        if: contains(matrix.os, 'macos')
+        run: sudo systemsetup -settimezone America/New_York
+
+      - name: Set timezone on Windows
+        if: contains(matrix.os, 'windows')
+        run: tzutil /s "Eastern Standard Time"
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+          bundler-cache: true
+
+      - name: Update RubyGems
+        run: gem update --system
+
+      - name: Disable bundler frozen setting
+        run: bundle config set frozen false
+
+      - name: Install dependencies
+        run: bundle install
+
+      - name: Run tests
+        run: bundle exec rake
