--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, ubuntu-20.04, macos-latest, macos-13, macos-12]
-        ruby: ["3.0.1", "3.1", "3.2", "3.3"]
+        ruby: ["3.1.6", "3.2", "3.3"]
 
     steps:
       - uses: actions/checkout@v3
