--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, ubuntu-20.04, macos-latest, macos-13, macos-12]
-        ruby: ["3.1.6", "3.2", "3.3"]
+        os: [ubuntu-latest, ubuntu-20.04, macos-13, macos-latest, macos-15]
+        ruby: ["3.2", "3.3", "3.4"]
 
     steps:
       - uses: actions/checkout@v3
