--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -15,6 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, ubuntu-20.04, macos-13, macos-latest, macos-15]
+        # Use `rbenv install --list` to determine what stable ruby versions to test against.
         ruby: ["3.2", "3.3", "3.4"]
 
     steps:
