--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -14,9 +14,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, ubuntu-20.04, macos-13, macos-latest, macos-15]
+        # See https://github.com/actions/runner-images
+        os: [ubuntu-22.04, ubuntu-24.04, macos-13, macos-14, macos-15]
         # Use `rbenv install --list` to determine what stable ruby versions to test against.
-        ruby: ["3.2", "3.3", "3.4"]
+        ruby: ["3.1", "3.2", "3.3", "3.4"]
 
     steps:
       - uses: actions/checkout@v3
